# UNMSM-Admission-Analytics

./: README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  ENDPOINTS_REPORT.md  README.md  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 2f7bc9a4d321_add_admin_bulk_import_tables.py  e694bcc659db_add_core_domain_models.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/dependencies/: auth.py
backend/app/api/routes/: academic_structure.py  admin.py  auth.py  dashboard.py  imports.py  processes.py  rankings.py  results.py
backend/app/core/: cache.py  config.py  db.py
backend/app/models/: __init__.py  academic.py  admission.py  imports.py
backend/app/repositories/: __init__.py  academic_structure.py  admin.py  bulk_imports.py  dashboard.py  imports.py  processes.py  rankings.py  results.py
backend/app/schemas/: __init__.py  academic_structure.py  admin.py  auth.py  dashboard.py  imports.py  major_analytics.py  major_trends.py  processes.py  rankings.py  results.py
backend/app/services/: __init__.py  academic_structure.py  admin.py  auth.py  bulk_imports.py  cache.py  cache_keys.py  dashboard.py  imports.py  processes.py  rankings.py  results.py  storage.py
backend/app/utils/: __init__.py  csv_import.py
backend/tests/: test_academic_structure_endpoints.py  test_admin_bulk_endpoints.py  test_cache_services.py  test_dashboard_endpoints.py  test_imports_endpoints.py  test_processes_endpoints.py  test_rankings_endpoints.py  test_results_endpoints.py
(+301 files in other folders)
